# PropChain-contract

./: AUDIT_LOG.md  BRIDGE_PR_DOCUMENTATION.md  CLAUDE.md  Cargo.toml  Makefile.toml  PAUSE_RESUME_IMPLEMENTATION.md  README.md  crates.js  deny.toml  help.html  index.html  plan.md  settings.html  src-files.js
.cargo/: audit.toml
.ink/: config.toml
ai_valuation/: all.html  index.html  sidebar-items.js
compliance_registry/: all.html  index.html
docs/: API_GUIDE.md  COMPONENT_INTERACTION_DIAGRAMS.md  pause-resume-functionality.md
fractional/: all.html  index.html
governance/: all.html  index.html
hello_world/: all.html  index.html  sidebar-items.js  static.__SPEC_XDR_TYPE_LOANSTATS.html  struct.LoanAnalyticsContract.html  struct.LoanAnalyticsContractArgs.html  struct.LoanAnalyticsContractClient.html  struct.LoanStats.html
indexer/: README.md
ipfs_metadata/: all.html  index.html
oracle/: all.html  enum.OracleError.html  index.html  sidebar-items.js  struct.PropertyValuationOracle.html
propchain_analytics/: all.html  index.html
propchain_bridge/: all.html  index.html
propchain_contracts/: all.html  enum.AccessControlError.html  enum.Action.html  enum.AdminActionKind.html  enum.AdminActionStatus.html  enum.AlertType.html  enum.ApprovalType.html  enum.AuditAction.html  enum.BridgeOperation.html  enum.BridgeOperationStatus.html  enum.ChainTxStatus.html  enum.CommonError.html  enum.ComplianceOperation.html  enum.ContractType.html  enum.CrossChainTradeStatus.html  enum.CryptoAuditAction.html  enum.CryptoError.html  (+128 more)
tests/: Cargo.toml  bridge_load_tests.rs  integration_property_token.rs  lib.rs  load_tests.rs  property_token_tests.rs  security_audit_runner.rs
tests/regression/: mod.rs
(+7275 files in other folders)
